--- a/Crud/index.html
+++ b/Crud/index.html
@@ -14,8 +14,8 @@
         <h1 class="header-title">Cadastro de Clientes</h1>
     </header>
     <main>
-        <button type="button" id="cadastrarCliente">Cadastrar</button>
-        <table id="tableCliente" class="gravar">
+        <button type="button" class="button blue" id="cadastrarCliente">Cadastrar</button>
+        <table id="tableCliente" class="">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -29,23 +29,25 @@
 
             </tbody>
         </table>
-        <div class="modal" id="modal">
+        <div class="" id="modal">
             <div class="modal-content">
                 <header class="modal-header">
                     <h2>Novo Cliente</h2>
+                    <span class="modal-close" id="modalClose">&#10006</span>
                 </header>
-                <form id="form" class="modal-form" action="">
+                <form id="form" class="">
                     <input type="text" id="nome" class="modal-field" placeholder="Nome do cliente" required>
                     <input type="email" id="email" class="modal-field" placeholder="Digite o email do cliente" required>
                     <input type="text" id="celular" class="modal-field" placeholder="Digite o celular do cliente" required>
-                    <input type="text" id="cidade" class="modal=field" placeholder="Cidade do cliente" required>
+                    <input type="text" id="cidade" class="modal-field" placeholder="Cidade do cliente" required>
                 </form>
+                <footer class="modal-footer">
+                    <button id="salvar" class="">Salvar</button>
+                    <button id="cancelar" class="">Cancelar</button>
+                </footer>
             </div>
         </div>
-        <footer class="modal-footer">
-            <button id="salvar" class="button green">Salvar</button>
-            <button id="cancelar" class="button blue">Cancelar</button>
-        </footer>
+        
     </main>
     <footer>
         Copyright &copy; Leonardo Bicalho leonardinho.srb@gmail.com
