--- a/Crud/index.html
+++ b/Crud/index.html
@@ -14,8 +14,8 @@
         <h1 class="header-title">Cadastro de Clientes</h1>
     </header>
     <main>
-        <button type="button" class="button blue" id="cadastrarCliente">Cadastrar</button>
-        <table id="tableCliente" class="">
+        <button type="button" class="button blue mobile" id="cadastrarCliente">Cadastrar</button>
+        <table class="records">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -33,17 +33,17 @@
             <div class="modal-content">
                 <header class="modal-header">
                     <h2>Novo Cliente</h2>
-                    <span class="modal-close" id="modalClose">&#10006</span>
+                    <span class="modal-close" id="modalClose">&#10006;</span>
                 </header>
-                <form id="form" class="">
-                    <input type="text" id="nome" class="modal-field" placeholder="Nome do cliente" required>
+                <form id="form" class="modal-form">
+                    <input type="text" id="nome" data-index="new" class="modal-field" placeholder="Nome do cliente" required>
                     <input type="email" id="email" class="modal-field" placeholder="Digite o email do cliente" required>
                     <input type="text" id="celular" class="modal-field" placeholder="Digite o celular do cliente" required>
                     <input type="text" id="cidade" class="modal-field" placeholder="Cidade do cliente" required>
                 </form>
                 <footer class="modal-footer">
-                    <button id="salvar" class="">Salvar</button>
-                    <button id="cancelar" class="">Cancelar</button>
+                    <button id="salvar" class="button green">Salvar</button>
+                    <button id="cancelar" class="button blue">Cancelar</button>
                 </footer>
             </div>
         </div>
